syntax = "proto3";

option java_multiple_files=true;
option java_package="hellogrpcdemo";

service HelloService {
   rpc sayHello (HelloRequest) returns (HelloResponse);

   rpc createNewPerson (PersonRequest) returns (PersonResponse);
}

message HelloRequest{
  string name = 1;

}

message HelloResponse{
  string response = 2;
}

message PersonRequest{
  int32 id =1;
  string name=2;
  string email=3;
  string gender=4;
}

message PersonResponse{
  string name=1;
  string email=2;
}